# NetViz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  fetch_peeringdb_data.py  gunicorn.conf.py  main.py  pyproject.toml  renovate.json
.circleci/: config.yml
.github/workflows/: docker-publish.yml  rust.yml
assets/: style.css
netviz/: app.py  data.py  fetch_peeringdb.py
src/: data.rs  error.rs  fetcher.rs  handlers.rs  main.rs  models.rs  state.rs
templates/: analytics.html  base.html  dashboard.html  networks.html  search.html
