[package]
name = "netviz"
version = "1.0.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tera = "2.0"
tower-http = { version = "0.7", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.15"
thiserror = "2.0"
anyhow = "1.0"
